--- a/Week-1/HW1.ipynb
+++ b/Week-1/HW1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "00d0a60a-363e-4797-8f1d-2b3babf2a928",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "'2.3.2'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "80104d1e-c62d-4516-a913-e332cf3e8bc2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5da4740e-bf0d-437a-b366-65a556ced9e3",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "5b7cd60d-1264-43fb-ac04-d505453babaf",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "303566f7-5c4c-4820-8d43-2456dc7a29a2",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "229ff387-7639-4b5f-8e52-d8d791e2b028",
    "metadata": {},
    "outputs": [
@@ -263,6 +263,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "num_cylinders    482\n",
+      "horsepower       708\n",
+      "acceleration     930\n",
+      "num_doors        502\n",
+      "dtype: int64\n",
       "Number of columns with missing values: 4\n"
      ]
     }
@@ -270,6 +275,7 @@
    "source": [
     "missing_per_col = df.isna().sum()\n",
     "cols_with_na = missing_per_col[missing_per_col > 0]\n",
+    "print(cols_with_na)\n",
     "\n",
     "print(\"Number of columns with missing values:\", cols_with_na.shape[0])"
    ]
@@ -285,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "499d9c1e-e4d9-4ced-90f3-9c25bbafe18a",
    "metadata": {},
    "outputs": [
@@ -318,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "ede4ac6b-c436-4e65-add0-3967b16bb3b7",
    "metadata": {},
    "outputs": [
@@ -326,16 +332,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "149.0\n",
+      "0    152.0\n",
+      "Name: horsepower, dtype: float64\n",
+      "149.0\n",
       "Change in Median : 0.0\n"
      ]
     }
    ],
    "source": [
     "median_1 = df['horsepower'].median()\n",
+    "print(median_1)\n",
     "mode = df['horsepower'].mode()\n",
+    "print(mode)\n",
     "df['horsepower'] = df['horsepower'].fillna(mode)\n",
     "median_2 = df['horsepower'].median()\n",
+    "print(median_2)\n",
     "print(\"Change in Median :\", median_1 - median_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c7f364aa-9a58-400b-9514-cfbf9fab5c84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "149.0 152.0 152.0 Changed? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "m1 = df['horsepower'].median()\n",
+    "mode = df['horsepower'].mode().iloc[0]   # <-- scalar\n",
+    "df['horsepower'] = df['horsepower'].fillna(mode)\n",
+    "m2 = df['horsepower'].median()\n",
+    "print(m1, mode, m2, \"Changed?\" , m2 != m1)"
    ]
   },
   {
@@ -358,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e7580ad0-3729-464a-b3ff-665800073d43",
    "metadata": {},
    "outputs": [
@@ -368,7 +403,7 @@
        "np.float64(0.5187709081074016)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
